0.8.0
Changed: Public dependencies

0.7.0
New feature: ArrayHelper
New feature: CompileException
New feature: FloatArray
New feature: IntArray
New feature: MapStr2Str
New feature: MeshFile
New feature: MeshLoader
New feature: MeshVar

0.6.1
Fixed Javadoc
0.6.0
Removed: Mesh builder
New feature: `BaseMesh`

0.5.0
New feature: Bind JOML now
New feature: Package math
Changed: `AtlasLoom#load` returns int now
Deprecated: Mesh builder

0.4.0
New feature: GLString
New feature: StbImg
New feature: AWTImage
New feature: `GLProgram#setUniform*`
Changed: `IMesh#*Size` -> `IMesh#*Dim`
Changed: Split `AtlasLoom` into `-AWT` and `-STB`
Changed: `AtlasLoom` must construct by name
Fixed a bug: `IMesh#texDim` is 3

0.3.0
New feature: Developers can load texture by int array
New feature: Developers can generate image atlas by `AtlasLoom`
New feature: `GLProgram#vertexAttribPointer`
Fixed a fatal bug: Program crashed when creating shaders
    Exception in thread "main" java.lang.RuntimeException: Error compiling shader src: No errors.\\0
    	at org.overrun.glutils.GlProgram.createShader(GlProgram.java:84)

0.2.0
Fixed a bug: Program crashed when loading texture by `Textures.loadFS`
Fixed a bug: Expect ARGB but return ABGR when loading texture by `Textures.loadAWT`
New feature: Developers can load texture by ByteBuffer
New feature: `Mesh` for OpenGL 2 and `Mesh3` for OpenGL 3
New feature: Developers can and MUST close `Textures` before terminating
New feature: interface for `ThrowableCallback`
Changed: Program will not throw an exception when attrib not found (`GLProgram#getAttrib`)

0.1.0
org.overrun.glutils
    .callback
        + ErrorCallback
        + WarningCallback
    + GLProgram
    + GLUtils
    + ShaderReader
    + ShaderType
    + Textures